--- a/.github/workflows/github-linter.yml
+++ b/.github/workflows/github-linter.yml
@@ -13,7 +13,10 @@ jobs:
       run: |
         sudo apt update && \
         sudo apt install -y clang clang-tidy
-
+    - name: "generate compile_commands.json"
+      run: |
+        mkdir build && cd build && \
+        cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON .. && cd ..
     - name: "clang-tidy"
       run: |
-        find ${{ github.workspace }} -iname *.h -o -iname "*.cpp" | xargs clang-tidy
+        find ${{ github.workspace }} -iname *.h -o -iname "*.cpp" | xargs clang-tidy -p=./build
